<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Speak Message Service</string>
    <string name="master_enable_checkbox">Enable the service</string>
    <string name="master_enable_checkbox_summary">When off, no messages are read out.</string>
    <string name="read_all_sms_checkbox">Read out all messages</string>
    <string name="read_all_warning">Warning: reading out all SMS messages can lead to severe embarrassment.</string>
    <string name="announce_sender">Announce the sender</string>
    <string name="announce_sender_summary">Announce who sent the SMS before the message is read out.</string>
    <string name="stop_reading_now">Stop Reading now</string>
    <string name="stop_reading_now_summary">Immediately stop reading out the current message.</string>
    <string name="edit_whitelist">Edit whitelist</string>
    <string name="edit_whitelist_summary">Choose which contacts are read out.</string>
	<string name="delay_readout">Delay reading</string>
	<string name="delay_readout_summary">Delay reading the SMS for %d second%s.</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="advanced_settings_summary">Change the voice, change the speaking speed, or delay reading.</string>
    <string name="language">Choose Language</string>
    <string name="language_summary">Choose the language that the TTS uses to read out messages.</string>
    <string name="read_speed">Speech Rate</string>
    <string name="read_speed_summary">Select how fast to read the message.</string>
    <string name="preview">Preview</string>
    <string name="preview_summary">Preview the selected language and speed settings.</string>
    <string name="preview_speak">Hello from your Speak Message Service. 12 70 called and wants its Android back.</string> <!-- http://en.wikipedia.org/wiki/Android -->
    
    <string name="add_contact">Add Contact</string>
    <string name="add_raw">Add string Contact</string>
    <string name="add_raw_message">Enter the contact phone number'.</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    
    <string name="ifContactEnabled">Enabled</string>
    <string name="ifContactNotEnabled">Not enabled</string>
    
    <string name="stopReadingNow">stopReadingNow</string>
    <string name="masterEnable">masterEnable</string>
    <string name="readAll">readAll</string>
    <string name="announceSender">announceSender</string>
    <string name="editWhitelist">editWhitelist</string>
    <string name="ttsLanguage">ttsLanguage</string>
    <string name="ttsSpeed">ttsSpeed</string>
    <string name="previewSpeech">previewSpeech</string>
    <string name="delayReadingTime">delayReadingTime</string>
    <string name="preferencesName">SpeakMessageServicePrefs</string>
    
    <string name="notts">You do not have the TTS library installed - Speak Message Service can not read out your messages until you install it.</string>
    
    <string name="announce_sep">says</string>
</resources>
